human-intervention-logs/biz.aQute.bnd:biz.aQute.bnd.util:6.4.1/gradle-test/gradle-test-2026-05-03T11-05-00-376438Z.log
> Task :tck-build-logic:extractPluginRequests UP-TO-DATE
> Task :tck-build-logic:generatePluginAdapters UP-TO-DATE
> Task :tck-build-logic:compileJava UP-TO-DATE
> Task :tck-build-logic:compileGroovy UP-TO-DATE
> Task :tck-build-logic:compileGroovyPlugins UP-TO-DATE
> Task :tck-build-logic:pluginDescriptors UP-TO-DATE
> Task :tck-build-logic:processResources UP-TO-DATE
> Task :tck-build-logic:classes UP-TO-DATE
> Task :tck-build-logic:jar UP-TO-DATE

> Configure project :
GraalVM Reachability Metadata TCK
---------------------------------

> Task :tckTest
====================
Testing library: biz.aQute.bnd:biz.aQute.bnd.util:6.4.1
Command: `/home/vjovanov/c/forge/forge4/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/4807-28ad47c0/gradlew nativeTest`
Executing test...
-------
> Task :tck-build-logic:extractPluginRequests UP-TO-DATE
> Task :tck-build-logic:generatePluginAdapters UP-TO-DATE
> Task :tck-build-logic:compileJava UP-TO-DATE
> Task :tck-build-logic:compileGroovy UP-TO-DATE
> Task :tck-build-logic:compileGroovyPlugins UP-TO-DATE
> Task :tck-build-logic:pluginDescriptors UP-TO-DATE
> Task :tck-build-logic:processResources UP-TO-DATE
> Task :tck-build-logic:classes UP-TO-DATE
> Task :tck-build-logic:jar UP-TO-DATE
> Task :compileJava NO-SOURCE
> Task :processResources NO-SOURCE
> Task :classes UP-TO-DATE
> Task :tck-test-support:compileJava UP-TO-DATE
> Task :tck-test-support:processResources NO-SOURCE
> Task :tck-test-support:classes UP-TO-DATE
> Task :jar UP-TO-DATE
> Task :tck-test-support:jar UP-TO-DATE
/home/vjovanov/c/forge/forge4/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/4807-28ad47c0/tests/src/biz.aQute.bnd/biz.aQute.bnd.util/6.4.1/src/test/java/biz_aQute_bnd/biz_aQute_bnd_util/ImmutableListInnerSerializationProxyTest.java:39: error: method containsExactly in class AbstractIterableAssert<SELF,ACTUAL,ELEMENT,ELEMENT_ASSERT> cannot be applied to given types;
        assertThat(restoredList).containsExactly("alpha", "beta", "gamma");
                                ^
  required: CAP#1[]
  found:    String,String,String
  reason: varargs mismatch; String cannot be converted to CAP#1
  where SELF,ACTUAL,ELEMENT,ELEMENT_ASSERT are type-variables:
    SELF extends AbstractIterableAssert<SELF,ACTUAL,ELEMENT,ELEMENT_ASSERT> declared in class AbstractIterableAssert
    ACTUAL extends Iterable<? extends ELEMENT> declared in class AbstractIterableAssert
    ELEMENT extends Object declared in class AbstractIterableAssert
    ELEMENT_ASSERT extends AbstractAssert<ELEMENT_ASSERT,ELEMENT> declared in class AbstractIterableAssert
  where CAP#1 is a fresh type-variable:
    CAP#1 extends Object from capture of ?
1 error

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':compileTestJava'.
> Compilation failed; see the compiler output below.
  /home/vjovanov/c/forge/forge4/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/4807-28ad47c0/tests/src/biz.aQute.bnd/biz.aQute.bnd.util/6.4.1/src/test/java/biz_aQute_bnd/biz_aQute_bnd_util/ImmutableListInnerSerializationProxyTest.java:39: error: method containsExactly in class AbstractIterableAssert<SELF,ACTUAL,ELEMENT,ELEMENT_ASSERT> cannot be applied to given types;
          assertThat(restoredList).containsExactly("alpha", "beta", "gamma");
                                  ^
    required: CAP#1[]
    found:    String,String,String
    reason: varargs mismatch; String cannot be converted to CAP#1
    where SELF,ACTUAL,ELEMENT,ELEMENT_ASSERT are type-variables:
      SELF extends AbstractIterableAssert<SELF,ACTUAL,ELEMENT,ELEMENT_ASSERT> declared in class AbstractIterableAssert
      ACTUAL extends Iterable<? extends ELEMENT> declared in class AbstractIterableAssert
      ELEMENT extends Object declared in class AbstractIterableAssert
      ELEMENT_ASSERT extends AbstractAssert<ELEMENT_ASSERT,ELEMENT> declared in class AbstractIterableAssert
    where CAP#1 is a fresh type-variable:
      CAP#1 extends Object from capture of ?
  1 error

* Try:
> Check your code and dependencies to fix the compilation error(s)
> Run with --scan to generate a Build Scan (Powered by Develocity).

BUILD FAILED in 2s

> Task :compileTestJava FAILED

[Incubating] Problems report is available at: file:///home/vjovanov/c/forge/forge4/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/4807-28ad47c0/tests/src/biz.aQute.bnd/biz.aQute.bnd.util/6.4.1/build/reports/problems/problems-report.html

Deprecated Gradle features were used in this build, making it incompatible with Gradle 10.

You can use '--warning-mode all' to show the individual deprecation warnings and determine if they come from your own scripts or plugins.

For more on this, please refer to https://docs.gradle.org/9.1.0/userguide/command_line_interface.html#sec:command_line_warnings in the Gradle documentation.
12 actionable tasks: 1 executed, 11 up-to-date

> Task :tckTest FAILED

[Incubating] Problems report is available at: file:///home/vjovanov/c/forge/forge4/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/4807-28ad47c0/build/reports/problems/problems-report.html

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':tckTest'.
> Test for biz.aQute.bnd:biz.aQute.bnd.util:6.4.1 failed with exit code 1.

* Try:
> Run with --stacktrace option to get the stack trace.
> Run with --info or --debug option to get more log output.
> Run with --scan to generate a Build Scan (Powered by Develocity).
> Get more help at https://help.gradle.org.

Deprecated Gradle features were used in this build, making it incompatible with Gradle 10.

You can use '--warning-mode all' to show the individual deprecation warnings and determine if they come from your own scripts or plugins.

For more on this, please refer to https://docs.gradle.org/9.1.0/userguide/command_line_interface.html#sec:command_line_warnings in the Gradle documentation.

BUILD FAILED in 3s
9 actionable tasks: 1 executed, 8 up-to-date
